--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "history": "^5.1.0",
     "install": "^0.13.0",
+    "moment": "^2.29.1",
     "npm": "^8.1.3",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-notification-system": "^0.4.0",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -44,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
     "@types/react-notification-system": "^0.2.41"
   }
 }
