--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
     "formik": "^2.2.9",
     "history": "^5.1.0",
     "install": "^0.13.0",
