--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
