--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^3.5.1",
+    "@mantine/hooks": "^3.5.1",
+    "@mantine/notifications": "^3.5.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -21,10 +24,9 @@
     "react-cookie": "^4.1.1",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
-    "react-notification-system": "^0.4.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2",
